feat: book , customer,rent

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,7 +1,7 @@
 #uiType=cli
-uiType=swing
-#uiType=javafx
+#uiType=swing
+uiType=javafx
 #swingTheme=flatlightlaf
 #swingTheme=flatdarculalaf
-swingTheme=flatdarklaf
-#swingTheme=flatintellijlaf
+#swingTheme=flatdarklaf
+swingTheme=flatintellijlaf
